--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -389,7 +389,7 @@
 
             <div class="signup-link">
                 아직 계정이 없으신가요?
-                <a href="#" onclick="goToSignup()">회원가입</a>
+                <a href="#" onclick="location.href='signup.html'">회원가입</a>
             </div>
 
             <div class="divider">소개 페이지로 이동하기</div>
