모든 html page들을 public/ 안으로 이동

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -404,6 +404,6 @@
             </div>
         </div>
 
-        <script></script>
+        <script src="../components/auth/LoginForm.js"></script>
     </body>
 </html>
